<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ __          ________        _  _____
  ~ \ \        / /  ____|      (_)/ ____|
  ~  \ \  /\  / /| |__      ___ _| (___   ___  ___
  ~   \ \/  \/ / |  __|    / _ \ |\___ \ / _ \/ __|
  ~    \  /\  /  | |____  |  __/ |____) | (_) \__ \
  ~     \/  \/   |______|  \___|_|_____/ \___/|___/
  ~
  ~ Copyright Wuerth Elektronik eiSos 2019
  ~
  -->
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:id="@+id/ConstraintL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/terminal_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        tools:visibility="visible">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/device_toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme">

            <Spinner
                android:id="@+id/spinner_log_filter"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:layout_margin="5dp"
                android:entries="@array/logFilterEntries"
                android:spinnerMode="dropdown" />
        </androidx.appcompat.widget.Toolbar>

        <ListView
            android:id="@+id/terminal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1">

        </ListView>

        <TextView
            android:id="@+id/tv_no_entries"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/noLogEntries" />

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/channelContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_weight="1"
        android:fillViewport="true"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_selected_profile"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:text="@string/profileSelectedNone" />

                <ImageView
                    android:id="@+id/img_save_profile"
                    android:layout_width="35dp"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_save" />

                <ImageView
                    android:id="@+id/img_reset_profile"
                    android:layout_width="35dp"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_restore" />

                <ImageView
                    android:id="@+id/img_add_profile"
                    android:layout_width="35dp"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_add" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_channel1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/channel1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                <TextView
                    android:id="@+id/tv_channel1_perc"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:gravity="center_vertical"
                    android:text="25 %" />
            </LinearLayout>

            <SeekBar
                android:id="@+id/sb_channel1"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:max="100"
                android:progress="50"
                android:progressTint="@color/colorPrimary"
                android:thumb="@drawable/seekbar_knob" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_channel2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/channel2"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                <TextView
                    android:id="@+id/tv_channel2_perc"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:gravity="center_vertical"
                    android:text="25 %" />
            </LinearLayout>

            <SeekBar
                android:id="@+id/sb_channel2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:max="100"
                android:progress="50"
                android:progressTint="@color/colorPrimary"
                android:thumb="@drawable/seekbar_knob" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_channel3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/channel3"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                <TextView
                    android:id="@+id/tv_channel3_perc"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:gravity="center_vertical"
                    android:text="25 %" />
            </LinearLayout>

            <SeekBar
                android:id="@+id/sb_channel3"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:max="100"
                android:progress="50"
                android:progressTint="@color/colorPrimary"
                android:thumb="@drawable/seekbar_knob" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_channel4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/channel4"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                <TextView
                    android:id="@+id/tv_channel4_perc"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:gravity="center_vertical"
                    android:text="25 %" />
            </LinearLayout>

            <SeekBar
                android:id="@+id/sb_channel4"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:max="100"
                android:progress="50"
                android:progressTint="@color/colorPrimary"
                android:thumb="@drawable/seekbar_knob" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_brightness"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/brightness"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                <TextView
                    android:id="@+id/tv_channelBright_perc"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:gravity="center_vertical"
                    android:text="50 %" />
            </LinearLayout>

            <SeekBar
                android:id="@+id/sb_brightness"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="20dp"
                android:max="100"
                android:progress="50"
                android:progressTint="@color/colorPrimary"
                android:thumb="@drawable/seekbar_knob" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_sending_info"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/ic_alert"
                    android:text="@string/deviceSendingInfo"
                    app:drawableTint="@color/colorPrimary" />
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>